--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>io.mikesir87.javacors</groupId>
   <artifactId>javacors</artifactId>
   <packaging>pom</packaging>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0</version>
 
   <name>${project.artifactId}</name>
   <description>
@@ -32,7 +32,7 @@
     <connection>scm:git:git@github.com:mikesir87/${project.artifactId}.git</connection>
     <developerConnection>${project.scm.connection}</developerConnection>
     <url>git@github.com:mikesir87/${project.artifactId}.git</url>
-    <tag>HEAD</tag>
+    <tag>1.3.0</tag>
   </scm>
 
   <build>
